<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="dlp.bluelupin.dlp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#e60000"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/logoLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimValue_5"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/leftArrow"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="arr"
                            android:textColor="#fff"
                            android:textSize="@dimen/dimTextSize_30" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimValue_10"
                        android:gravity="left|center"
                        android:text="@string/account_settings"
                        android:textColor="#fff"
                        android:textSize="@dimen/dimTextSize_22" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimValue_16"
                android:layout_marginRight="@dimen/dimValue_16"
                android:layout_marginTop="@dimen/dimValue_30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView android:id="@+id/nameLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_20" />

                    <EditText
                        android:id="@+id/enterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_name"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView android:id="@+id/emailLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_20" />

                    <EditText
                        android:id="@+id/enterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_email"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView android:id="@+id/phoneLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_20" />

                    <EditText
                        android:id="@+id/enterPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_phone"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimValue_5"
                        android:background="#929495" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView android:id="@+id/lanLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_language"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_20" />

                    <Spinner
                        android:id="@+id/spinner"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                        <CheckBox android:id="@+id/autoPlay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/autoplay_videos"
                            android:textColor="#4a4d4e"
                            android:textSize="@dimen/dimTextSize_20"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimValue_30"
                    android:orientation="vertical">

                    <TextView android:id="@+id/genderLable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="#4a4d4e"
                        android:textSize="@dimen/dimTextSize_20" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_10"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/radioGrp"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioM"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_weight="0.4"
                                android:checked="true"
                                android:text="@string/male"
                                android:textColor="#4a4d4e"
                                android:textSize="@dimen/dimTextSize_20" />

                            <RadioButton
                                android:id="@+id/radioF"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="0.6"
                                android:checked="false"
                                android:text="@string/female"
                                android:textColor="#4a4d4e"
                                android:textSize="@dimen/dimTextSize_20" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimValue_20"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dimValue_10"
                            android:layout_weight="0.5"
                            android:background="@drawable/cancel_corner_round"
                            android:gravity="center"
                            android:padding="@dimen/dimValue_13"
                            android:text="@string/cancel"
                            android:textColor="#fff"
                            android:textSize="@dimen/dimTextSize_20" />

                        <TextView
                            android:id="@+id/save"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimValue_10"
                            android:layout_weight="0.5"
                            android:background="@drawable/done_corner_round"
                            android:gravity="center"
                            android:padding="@dimen/dimValue_13"
                            android:text="@string/save"
                            android:textColor="#fff"
                            android:textSize="@dimen/dimTextSize_20" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#00000000" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
